Done with navbar combining

--- a/Week1/Assignment20thDec/css/contact.css
+++ b/Week1/Assignment20thDec/css/contact.css
@@ -17,3 +17,8 @@ p {
 .btn-primary {
   font-weight: bold;
 }
+.main-container {
+  padding-top: 150px;
+  background-color: #f5f6fe;
+  padding-bottom: 70px;
+}
