--- a/Week1/Assignment20thDec/css/contact.css
+++ b/Week1/Assignment20thDec/css/contact.css
@@ -22,3 +22,20 @@ p {
   background-color: #f5f6fe;
   padding-bottom: 70px;
 }
+.row-container {
+  padding-top: 50px;
+  background-color: white;
+  border-radius: 50px;
+}
+.form-col {
+  text-align: center;
+}
+.inputs {
+  border-radius: 20px;
+  background-color: rgb(239, 241, 241);
+}
+.page-title {
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 90px;
+}
