--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -1,8 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600;900&display=swap');
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 nav {
   display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  left: 0;
+  right: 0;
+  z-index: 1;
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
+ul {
+  list-style: none;
+}
+nav ul {
+  display: flex;
+}
+nav ul li a {
+  height: 40px;
+  margin: 3px;
+  padding: 10px 22px;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #585b55;
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+nav ul li a:hover {
+  background-color: seagreen;
+  color: white;
+  border-radius: 5px;
+}
+#main {
+  width: 100%;
+}
+a {
+  text-decoration: none;
 }
 .logo-heading {
   font-weight: 300;
   font-size: 40px;
   color: black;
+}
+.name {
+  font-weight: 800;
+  text-decoration: underline;
+  text-decoration-color: seagreen;
+}
+.content {
+  width: 90%;
+  display: flex;
+  margin-top: 10%;
 }
