--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -12,6 +12,7 @@ nav {
   z-index: 1;
 
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  height: 100px;
 }
 ul {
   list-style: none;
@@ -54,4 +55,23 @@ a {
   width: 90%;
   display: flex;
   margin-top: 10%;
+}
+.model {
+  width: 100%;
+  height: 600px;
+}
+
+.model img {
+  width: 100%;
+}
+
+.main-text {
+  width: 40%;
+}
+.portfolio-button {
+  background: seagreen;
+  color: white;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: 20px;
 }
