--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -7,10 +7,10 @@ nav {
   width: 100%;
   justify-content: space-around;
   align-items: center;
+  position: fixed;
   left: 0;
   right: 0;
   z-index: 1;
-
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   height: 100px;
 }
@@ -55,6 +55,8 @@ a {
   width: 90%;
   display: flex;
   margin-top: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .model {
   width: 100%;
@@ -63,15 +65,25 @@ a {
 
 .model img {
   width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .main-text {
   width: 40%;
+}
+.button-p {
+  margin-top: 30px;
+}
+.mt-0 {
+  margin-top: 0px;
 }
 .portfolio-button {
   background: seagreen;
   color: white;
   border-radius: 5px;
   padding: 10px 20px;
-  width: 20px;
+  border: 1px solid white;
+}
+.portfolio-button:hover {
 }
