--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;900&display=swap');
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -7,7 +7,6 @@ nav {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
   left: 0;
   right: 0;
   z-index: 1;
@@ -57,15 +56,17 @@ a {
   margin-top: 10%;
   margin-left: 5%;
   margin-right: 5%;
+  align-items: center;
+  justify-content: space-between;
 }
 .model {
-  width: 100%;
-  height: 600px;
+  width: 600px;
+  height: auto;
 }
 
 .model img {
   width: 100%;
-  height: 100%;
+  height: 60%;
   object-fit: contain;
 }
 
@@ -86,4 +87,7 @@ a {
   border: 1px solid white;
 }
 .portfolio-button:hover {
+  background-color: white;
+  color: seagreen;
+  border: 1px solid seagreen;
 }
