--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -1,93 +1,151 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;900&display=swap');
+
+:root {
+  --main-bg-color: #6c5ce7;
+  --black-color: #000;
+  --white-main-color: #fff;
+  --dark-gray-color: #1e272e;
+  --light-gray-color: #747474;
+  --very-light-gray-color: #f0f0f0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  margin: 0px;
+  padding: 0px;
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-  height: 100px;
+
+.border {
+  border: 2px solid black;
 }
+
 ul {
   list-style: none;
 }
+
+a {
+  text-decoration: none;
+}
+
+#main {
+  width: 100%;
+  height: 100vh;
+  /* vh = view-height */
+  position: relative;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.02);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: var(--white-main-color);
+}
+
 nav ul {
   display: flex;
 }
+
 nav ul li a {
   height: 40px;
+  line-height: 43px;
   margin: 3px;
-  padding: 10px 22px;
+  padding: 0px 22px;
+  display: flex;
   text-transform: uppercase;
   font-weight: 500;
   color: #585b55;
   letter-spacing: 1px;
-  font-size: 0.8rem;
+  font-size: 0.8em;
 }
+
 nav ul li a:hover {
-  background-color: seagreen;
-  color: white;
+  background-color: var(--main-bg-color);
+  color: #fff;
   border-radius: 5px;
 }
-#main {
-  width: 100%;
+
+.get-in-touch {
+  color: var(--dark-gray-color);
+  font-weight: 500;
+  font-size: 0.9em;
+  border-bottom: 2px solid var(--main-bg-color);
 }
-a {
-  text-decoration: none;
-}
+
 .logo-heading {
   font-weight: 300;
-  font-size: 40px;
-  color: black;
+  font-size: 1.5rem;
+  color: var(--black-color);
 }
+
 .name {
   font-weight: 800;
   text-decoration: underline;
-  text-decoration-color: seagreen;
+  text-decoration-color: var(--main-bg-color);
 }
+
+/* Content */
 .content {
   width: 90%;
   display: flex;
-  margin-top: 10%;
-  margin-left: 5%;
-  margin-right: 5%;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
-}
-.model {
-  width: 600px;
-  height: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.model img {
+.model,
+.skill-img {
+  height: 500px;
+  width: 500px;
+}
+
+.model img,
+.skill-img img {
   width: 100%;
-  height: 60%;
+  height: 100%;
   object-fit: contain;
 }
 
 .main-text {
-  width: 40%;
+  width: 500px;
 }
-.button-p {
-  margin-top: 30px;
+
+.main-text h1 {
+  font-size: 3.5em;
+  margin: 0px 0px 10px 0px;
+  line-height: 60px;
 }
-.mt-0 {
-  margin-top: 0px;
+
+.main-text p {
+  color: var(--light-gray-color);
 }
+
 .portfolio-button {
-  background: seagreen;
-  color: white;
+  width: 190px;
+  height: 44px;
+  display: grid;
+  place-items: center;
+  color: var(--white-main-color);
+  background-color: var(--main-bg-color);
   border-radius: 5px;
-  padding: 10px 20px;
-  border: 1px solid white;
 }
-.portfolio-button:hover {
-  background-color: white;
-  color: seagreen;
-  border: 1px solid seagreen;
+#skills {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 90%;
+  margin: auto auto 50px auto;
 }
