--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -187,5 +187,10 @@ nav ul li a:hover {
 .s-box-text strong {
   color: var(--dark-gray-color);
   margin: 0px;
-  font-size: 16px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.s-box-container p {
+  font-size: 15px;
 }
