--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -194,3 +194,12 @@ nav ul li a:hover {
 .s-box-container p {
   font-size: 15px;
 }
+
+#my-projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 80%;
+  margin: auto auto 50px auto;
+}
