--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -203,3 +203,52 @@ nav ul li a:hover {
   width: 80%;
   margin: auto auto 50px auto;
 }
+.project-showcase {
+  display: flex;
+  width: 80%;
+  justify-content: space-evenly;
+}
+.project {
+  width: 300px;
+  height: 200px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 30px 0px;
+}
+
+.one {
+  background-image: url('../imgs/Programming-amico.png');
+  background-size: contain;
+}
+.two {
+  background-image: url('../imgs/Programming-amico.png');
+  background-size: contain;
+}
+.three {
+  background-image: url('..assets/imgs/Programming-amico.png');
+  background-size: contain;
+}
+
+.project #hide {
+  visibility: hidden;
+  background-color: var(--white-main-color);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 15px;
+  opacity: 100%;
+  z-index: 1000;
+}
+
+.project:hover #hide {
+  visibility: visible;
+  cursor: pointer;
+  z-index: 1000;
+  border: 1px solid var(--main-bg-color);
+}
