--- a/Week2/Assignment24thDec/assets/css/index.css
+++ b/Week2/Assignment24thDec/assets/css/index.css
@@ -252,3 +252,21 @@ nav ul li a:hover {
   z-index: 1000;
   border: 1px solid var(--main-bg-color);
 }
+
+.project-text {
+  color: var(--dark-gray-color);
+  font-size: 18px;
+  padding: 20px;
+  justify-content: space-evenly;
+}
+.project-btn {
+  background-color: var(--black-color);
+  color: var(--white-main-color);
+  border: 1px solid var(--main-bg-color);
+  border-radius: 10px;
+  padding: 15px;
+}
+.project-btn:hover {
+  background-color: var(--white-main-color);
+  color: var(--black-color);
+}
