--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -50,7 +50,7 @@ nav ul li a {
   color: var(--light-gray-color);
 }
 
-.call-to-cat-btn {
+.call-to-act-btn {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
