--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -15,13 +15,12 @@ body {
   box-sizing: border-box;
   color: var(--white-main-color);
 }
-.uppest-div {
-  background-image: linear-gradient(var(--main-bg-color), #181929);
-}
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 ul {
   list-style: none;
@@ -61,15 +60,17 @@ nav ul li a {
 a:hover {
   color: var(--white-main-color);
 }
-
+.uppest-div {
+  background-image: linear-gradient(var(--main-bg-color), #181929);
+}
 .first-div {
   display: flex;
   justify-content: space-around;
   margin-left: 10%;
   width: 80%;
   margin-top: 140px;
-  padding-bottom: 140px;
-  column-gap: 10%;
+  padding-bottom: 100px;
+  column-gap: 15%;
 }
 
 .text-div h1 {
@@ -78,8 +79,38 @@ a:hover {
   font-weight: 800;
 }
 .title-text span {
-  background-image: url(https://w7.pngwing.com/pngs/184/671/png-transparent-circle-border-blue-circle-gradient-circle-dense-circle.png);
+  background-image: url(https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5314b2a0a33c3a528_Shape%20Green.svg);
   background-position: 50% 50%;
   background-size: contain;
   background-repeat: no-repeat;
+}
+.text-div p {
+  margin-top: 30px;
+  color: var(--very-light-gray-color);
+  font-size: 18px;
+  line-height: 30px;
+}
+.first-div-btns {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 0.5fr 0.5fr;
+}
+.main-btn {
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  background-color: #fdd241;
+  color: var(--dark-gray-color);
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.5px;
+}
+.main-btn:hover {
+  background-color: goldenrod;
+  color: var(--dark-gray-color);
 }
