--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -129,8 +129,6 @@ a:hover {
 .companies {
   color: var(--dark-gray-color);
   margin: 30px 150px;
-
-  border-bottom: 1px solid var(--white-main-color);
 }
 .companies-content {
   display: flex;
@@ -142,4 +140,69 @@ a:hover {
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
+}
+.how-it-works {
+  border-top: 1px solid #e0e0e0;
+  color: var(--main-bg-color);
+  background-color: #f8f8f8;
+  align-items: center;
+}
+
+.how-it-works-block {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 120px 150px;
+}
+.how-it-works h2 {
+  color: #191b35;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 600;
+}
+
+.how-it-works h2 span {
+  background-image: url(https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea66534b33a0d0cffa6_Text%20Span%20Shape.svg);
+  background-position: 50% 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: #3fdeae;
+}
+
+.cards-div {
+  display: flex;
+  flex-direction: row;
+  margin-top: 80px;
+  column-gap: 30px;
+}
+
+.card-blocks {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-radius: 16px;
+  transition: background-color 0.3s ease-in-out;
+  cursor: crosshair;
+}
+.card-title {
+  margin: 0 30px 50px;
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: 500;
+}
+.card-title span {
+  font-weight: 700;
+}
+.img-bg {
+  margin-left: 17%;
+}
+
+.card-paragraph {
+  margin: 40px 30px 0;
+  font-size: 14px;
+  line-height: 24px;
+}
+.card-blocks:hover {
+  background-color: var(--main-bg-color);
+  color: white;
 }
