--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -154,6 +154,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   margin: 120px 150px;
+  padding-bottom: 120px;
 }
 .how-it-works h2 {
   color: #191b35;
@@ -205,4 +206,51 @@ a:hover {
 .card-blocks:hover {
   background-color: var(--main-bg-color);
   color: white;
+}
+#Features {
+  background-color: #f8f8f8;
+  color: black;
+  position: relative;
+}
+.block-content {
+  margin: 120px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+  width: 95%;
+}
+.section-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #191b35;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 600;
+}
+.section-title span {
+  background-image: url(https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea66534b33a0d0cffa6_Text%20Span%20Shape.svg);
+  background-position: 50% 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: #3fdeae;
+}
+.features-grid {
+  display: grid;
+  margin-top: 80px;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.feature-block {
+  display: grid;
+  padding: 24px;
+  flex-direction: row;
+  grid-column-gap: 14px;
+  grid-template-columns: 48px 1fr;
+  grid-template-rows: auto;
+  border-radius: 16px;
+  background-color: #fff;
+  transition: box-shadow 0.3s ease-in-out;
+  cursor: crosshair;
 }
