--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -212,7 +212,7 @@ a:hover {
   color: white;
 }
 #Features,
-#FAQs {
+#FAQS {
   color: black;
   position: relative;
 
@@ -355,10 +355,40 @@ a:hover {
   font-weight: 500;
   text-align: left;
 }
-.testimonial-image img:nth-child(2) {
-  position: absolute;
-  left: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
+#customer-feedback {
+  padding-bottom: 100px;
+}
+.block-contents {
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  background-image: linear-gradient(#ffffff, #f9f9f9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px 40px;
+  padding: 100px 0px;
+  z-index: 1;
+}
+.faqs-block {
+  width: 100%;
+  height: auto;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  -webkit-perspective-origin: 50% 100%;
+  perspective-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+}
+.faqs-box {
+  display: flex;
+  flex-direction: row;
+  column-gap: 50px;
+  margin: 80px 0px;
+  padding: 0px 150px;
+}
+.fas-title h4 {
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: 500;
 }
