--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -396,4 +396,45 @@ a:hover {
 }
 .footer {
   background-color: var(--main-bg-color);
+  color: var(--white-main-color);
+  display: flex;
+  justify-content: center;
+}
+.footer-block {
+  padding-top: 40px;
+}
+.footer-links-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 800px;
+  margin-bottom: 20px;
+}
+.footer-benchmark-line {
+  color: #bfbfbf;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 0.01px solid rgba(255, 255, 255, 0.212);
+}
+.footer-title {
+  margin-top: 0;
+  color: #fff;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 500;
+}
+.footer-link {
+  display: block;
+  margin-top: 25px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  opacity: 0.8;
+  -webkit-transition: color 250ms ease-in-out;
+  transition: color 250ms ease-in-out;
+  color: #bfbfbf;
+  line-height: 16px;
+  font-weight: 500;
+  text-decoration: none;
 }
