--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -190,6 +190,9 @@ a:hover {
   border-radius: 16px;
   transition: background-color 0.3s ease-in-out;
   cursor: crosshair;
+  box-shadow: rgba(44, 54, 82, 0.2) 0px 12px 28px 0px,
+    rgba(3, 40, 119, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 .card-title {
   margin: 0 30px 50px;
@@ -268,6 +271,7 @@ a:hover {
   border-radius: 16px;
   background-color: #fff;
   transition: box-shadow 0.3s ease-in-out;
+
   cursor: crosshair;
 }
 .feature-block:hover {
@@ -437,4 +441,36 @@ a:hover {
   line-height: 16px;
   font-weight: 500;
   text-decoration: none;
+}
+.vertical-divider {
+  width: 1px;
+  height: 100%;
+  background-color: black;
+}
+.square {
+  height: 120px;
+  background-image: url(https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea4a28d58661b5e50af_Cart.png);
+}
+.coin {
+  height: 150px;
+  background-image: url(https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea4ec7a6539d131ffbf_Doge%20Coin.png);
+}
+.square,
+.coin {
+  background-repeat: no-repeat;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  color: white;
+  animation: shimmy 3s infinite;
+  animation-direction: alternate;
+}
+@keyframes shimmy {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(20px, 50px);
+  }
 }
