--- a/Week3/A2 HTML and CSS/assets/index.css
+++ b/Week3/A2 HTML and CSS/assets/index.css
@@ -18,6 +18,7 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
   color: var(--white-main-color);
 }
 nav {
