--- a/Week3/Responsive/style.css
+++ b/Week3/Responsive/style.css
@@ -53,3 +53,4 @@ img {
   display: block;
   max-width: 100%;
 }
+https: ; //thedevnation123.sharepoint.com/:v:/r/sites/WebAppDevelopment/Shared%20Documents/General/Recordings/Class%20and%20Lab-20220102_170430-Meeting%20Recording.mp4?csf=1&web=1&e=aUtA7e
