--- a/Week3/Responsive/style.css
+++ b/Week3/Responsive/style.css
@@ -71,3 +71,18 @@ section {
   margin-inline: auto;
   width: min(90%, 70.5rem);
 }
+
+.split {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 40em) {
+  .split {
+    flex-direction: row;
+  }
+
+  .split > * {
+    flex-basis: 100%;
+  }
+}
