--- a/Week3/Responsive/style.css
+++ b/Week3/Responsive/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary-200: #f3eed9;
-  --primary-400: #fff;
+  --primary-400: #824936;
   --neutral-100: #fff;
   ---neutral-200: #222c2a;
 
@@ -62,11 +62,6 @@ img {
 section {
   padding: 4rem 0;
 }
-@media (min-width: 40em) {
-  section {
-    padding: 7rem 0rem;
-  }
-}
 
 .container {
   margin-inline: auto;
@@ -78,6 +73,32 @@ section {
   flex-direction: column;
 }
 
+.container--narrow {
+  max-width: 34rem;
+}
+
+.bg-light {
+  background-color: var(--primary-200);
+}
+.bg-light h2 {
+  font-size: 4rem;
+}
+
+.bg-primary {
+  background-color: #824936;
+  color: var(---neutral-100);
+}
+
+.bg-dark {
+  color: var(---neutral-100);
+}
+
+.bg-primary h2,
+.bg-dark h2 {
+  color: #fff;
+}
+
+/*Media Queries*/
 @media (min-width: 40em) {
   .split {
     flex-direction: row;
@@ -90,19 +111,8 @@ section {
   }
 }
 
-.container--narrow {
-  max-width: 34rem;
-}
-
-.bg-light {
-  background-color: var(--primary-200);
-}
-
-.bg-primary {
-  background-color: #824936;
-  color: var(---neutral-100);
-}
-
-.bg-dark {
-  color: var(---neutral-100);
+@media (min-width: 40em) {
+  section {
+    padding: 7rem 0rem;
+  }
 }
