--- a/Week4/A3-html-and-css/frontend-challenge-main/index.css
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.css
@@ -1,10 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
 }
+/*
+### Primary
+
+- Dark Blue: hsl(233, 26%, 24%)
+- Lime Green: hsl(136, 65%, 51%)
+- Bright Cyan: hsl(192, 70%, 51%)
+
+### Neutral
+
+- Grayish Blue: hsl(233, 8%, 62%)
+- Light Grayish Blue: hsl(220, 16%, 96%)
+- Very Light Gray: hsl(0, 0%, 98%)
+- White: hsl(0, 0%, 100%)
+*/
+body {
+  font-family: 'Public Sans';
+  font-size: 18px;
+}
+.grid-container {
+  display: grid;
+  margin: 0px 30vh;
+  height: 10vh;
+  align-items: center;
+}
+
 nav {
   display: grid;
-  grid-area: header;
   grid-template-columns: max-content auto max-content;
   background-color: aqua;
+}
+.menu-item {
+  display: grid;
+  background-color: black;
+  grid-template-columns: auto auto auto auto auto;
+  justify-content: center;
 }
