--- a/Week4/A3-html-and-css/frontend-challenge-main/index.css
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.css
@@ -1,22 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
+:root {
+  /* Primary Colors */
+  --primary-dark-blue: hsl(233, 26%, 24%);
+  --primary-lime-green: hsl(136, 65%, 51%);
+  --primary-bright-cyan: hsl(192, 70%, 51%);
+  /* Neutral Colors */
+  --neutral-grayish-blue: hsl(233, 8%, 62%);
+  --neutral-light-grayish-blue: hsl(220, 16%, 96%);
+  --neutral-verylight-gray: hsl(0, 0%, 98%);
+  --neutral-white: hsl(0, 0%, 100%);
+}
 * {
   margin: 0;
   padding: 0;
 }
-/*
-### Primary
-
-- Dark Blue: hsl(233, 26%, 24%)
-- Lime Green: hsl(136, 65%, 51%)
-- Bright Cyan: hsl(192, 70%, 51%)
-
-### Neutral
-
-- Grayish Blue: hsl(233, 8%, 62%)
-- Light Grayish Blue: hsl(220, 16%, 96%)
-- Very Light Gray: hsl(0, 0%, 98%)
-- White: hsl(0, 0%, 100%)
-*/
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
 body {
   font-family: 'Public Sans';
   font-size: 18px;
@@ -27,7 +30,6 @@ body {
   height: 10vh;
   align-items: center;
 }
-
 nav {
   display: grid;
   grid-template-columns: max-content auto max-content;
@@ -38,4 +40,8 @@ nav {
   background-color: black;
   grid-template-columns: auto auto auto auto auto;
   justify-content: center;
+}
+
+.call-to-act-btn {
+  background-color: var(--primary-lime-green);
 }
