Update index.html and index.css
Working on the  progressiveness

--- a/Week4/A3-html-and-css/frontend-challenge-main/index.css
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.css
@@ -103,6 +103,13 @@ a {
   background-size: 200vh;
   background-repeat: no-repeat;
 }
+@media only screen and (max-width: 768px) {
+  .navbar-grid {
+    display: grid;
+    margin: 0px 10vh;
+    height: 10vh;
+  }
+}
 .about-us-grid {
   background-color: var(--neutral-light-grayish-blue);
   padding: 15vh 20vh;
