--- a/Week4/A3-html-and-css/frontend-challenge-main/index.css
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.css
@@ -173,6 +173,26 @@ a {
   margin-top: 5vh;
   line-height: 3.5vh;
 }
+@media only screen and (max-width: 768px) {
+  .about-us-grid {
+    padding: 10vh 5vh;
+  }
+  .about-us-grid {
+    text-align: center;
+  }
+  .about-us-grid-row-title p,
+  .about-us-card p {
+    font-weight: 250;
+    font-size: 2.3vh;
+    line-height: 3.3vh;
+    margin-top: 3vh;
+  }
+  .about-us-grid-row-cards {
+    grid-template-columns: 1fr;
+    column-gap: 7vh;
+    row-gap: 5vh;
+  }
+}
 .blog-grid {
   padding: 15vh 20vh;
   background-color: var(--neutral-verylight-gray);
