--- a/Week4/A3-html-and-css/frontend-challenge-main/index.css
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.css
@@ -28,22 +28,25 @@ body {
   font-size: 18px;
 }
 .navbar-grid {
-  display: grid;
-  margin: 0px 30vh;
-  height: 10vh;
+  margin: 1% 15%;
   align-items: center;
+  background-color: var(--neutral-white);
 }
 nav {
   display: grid;
   grid-template-columns: max-content auto max-content;
   align-items: center;
+
+  overflow: hidden;
 }
 .menu-item {
   display: grid;
-
   grid-template-columns: 0fr 0fr 0fr 0fr 0fr;
   padding: 0px 120px;
   justify-content: space-evenly;
+}
+.icon {
+  display: none;
 }
 a {
   letter-spacing: -0.5px;
@@ -74,7 +77,25 @@ a {
     hsla(192, 70%, 51%, 0.699)
   );
 }
-
+.icon {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .navbar-grid {
+    margin: 5% 10%;
+  }
+  .menu-item li,
+  nav a {
+    display: none;
+  }
+  .nav {
+    grid-template-columns: 1fr 1fr;
+  }
+  .icon {
+    display: block;
+    cursor: pointer;
+  }
+}
 .hero-grid {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -110,10 +131,6 @@ a {
   margin-left: 7vw;
 }
 @media only screen and (max-width: 768px) {
-  .navbar-grid {
-    margin: 0px 10vh;
-    height: 10vh;
-  }
   .hero-grid {
     grid-template-columns: 100%;
     height: 100vh;
