Update index.html and index.css
Done with tht html of the navbar for desktop and basic styling for it

--- a/Week4/A3-html-and-css/bootstrap-challenge/index.css
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.css
@@ -1,4 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+:root {
+  --neutral-grayish-blue: hsl(229, 8%, 60%);
+  --neutral-very-dark-blue: hsl(229, 31%, 21%);
+  --primary-soft-blue: hsl(231, 69%, 60%);
+  --primary-soft-red: hsl(0, 94%, 66%);
+}
 * {
-  margin: 0;
-  padding: 0;
+  font-family: 'Rubik', sans-serif;
+  font-size: 18px;
+}
+html {
+  scroll-behavior: smooth;
+}
+ul {
+  list-style: none;
+}
+ul li a {
+  text-transform: uppercase;
+  color: black;
 }
