--- a/Week4/A3-html-and-css/bootstrap-challenge/index.css
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.css
@@ -26,13 +26,15 @@ ul {
 }
 .hero-column-left h1,
 .features-div h2,
-.download-extension-div h2 {
+.download-extension-div h2,
+.faq-div h2 {
   font-weight: 500;
 }
 .hero-column-left p,
 .features-content-div p,
 .download-extension-div p,
-.card-description p {
+.card-description p,
+.faq-body-div p {
   color: var(--neutral-grayish-blue);
   font-size: 20px;
   font-weight: 200;
@@ -62,12 +64,19 @@ ul {
     flex: 0 0 auto;
     width: 100%;
   }
+  .faq-div {
+  }
   .features-div-description {
     margin: 0 300px;
   }
+
   .download-extension-div-description {
     margin: 0 430px;
   }
+}
+.accordion {
+  max-width: 700px;
+  border-right: none;
 }
 .img {
   width: 10%;
@@ -88,4 +97,6 @@ ul {
 }
 .card {
   border-radius: 13px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
