--- a/Week4/A3-html-and-css/bootstrap-challenge/index.css
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.css
@@ -100,3 +100,16 @@ ul {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
+.contact-div {
+  background-color: var(--primary-soft-blue);
+}
+input {
+  border: none;
+  border-radius: 5px;
+}
+.contact-div {
+  color: white;
+}
+.contact-div p {
+  letter-spacing: 0.5vh;
+}
