--- a/Week4/A3-html-and-css/bootstrap-challenge/index.css
+++ b/Week4/A3-html-and-css/bootstrap-challenge/index.css
@@ -64,8 +64,6 @@ ul {
     flex: 0 0 auto;
     width: 100%;
   }
-  .faq-div {
-  }
   .features-div-description {
     margin: 0 300px;
   }
@@ -112,4 +110,12 @@ input {
 }
 .contact-div p {
   letter-spacing: 0.5vh;
+}
+
+.footer-div {
+  background-color: var(--neutral-very-dark-blue);
+  color: white;
+}
+.footer-nav ul li a {
+  color: var(--neutral-grayish-blue);
 }
